# epub-fanfic

./: .gitignore  Cargo.toml  flake.nix
src/: frontend.rs  frontend_iced.rs  get_data.rs  main.rs  serialization.rs  tags.rs  utils.rs
