[package]
name = "epub-fanfic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
colog = "1.3.0"
itertools = "0.13.0"
log = "0.4.22"
rbook = "0.5.0"
regex = "1.11.1"
roxmltree = "0.20.0"
rust_xlsxwriter = { version = "0.80.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
