[package]
name = "epub-fanfic-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
colog = "1.3.0"
iced = "0.13.1"
# eframe = "0.29.1"
# egui = { version = "0.29.1", features = ["log"] }
itertools = "0.13.0"
log = "0.4.22"
rbook = "0.5.0"
regex = "1.11.1"
rfd = { version = "0.15.1" }
roxmltree = "0.20.0"
rust_xlsxwriter = { version = "0.80.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
# serde_yaml = "0.9.34"
walkdir = "2.5.0"
