[package]
name = "epub-fanfic-explorer"
version = "0.2.0"
edition = "2021"

license = "GPL-2.0+"

[features]
default = []
no_gui = []

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
colog = "1.3.0"
html2text = "0.13.5"
iced = "0.13.1"
itertools = "0.13.0"
log = "0.4.22"
rbook = "0.5.0"
regex = "1.11.1"
rfd = { version = "0.15.1" }
roxmltree = "0.20.0"
rust_xlsxwriter = { version = "0.80.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.133"
walkdir = "2.5.0"
